# LocalStabilityCompensation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  mainlinux.yml
bpRNAStructure/: README.txt  StructureComponents.py  bpRNA_ea_test.db  bpRNA_ea_test.st  make_ste_dbn.sh
bpRNAStructure/parameters/: InnerLoop_1x2_Energies.py  __init__.py
data/: RNA_types.sh  make_2D_boxplots.sh  make_AUROC_curve_fits.sh  make_DMS_heatmaps.sh  make_avgstemplots.sh  make_compscore_histograms.sh  make_folded_heatmaps.sh  make_percent_highest_stems.sh  make_percent_stem_histogram.sh  make_perposition_stemReacs.sh  make_phylogenetic_histograms.sh  make_refold_comparison.sh  make_stemloop_energy_scatterplots.sh  plotAUROC_balance.sh
data/figure_scripts/: AUROC_correlations_table.py  CompScoreHistograms_rotation.py  DMSHeatmap.py  (+15 more)
data_bpRNAStructure/: RNA_types.sh  bpRNA_1m_90_IDs.txt  bulges_5nt.txt  make_Hairpins1m90withSeqs.py  make_compscore_histograms.sh  make_stemloop_energy_scatterplots.sh  ridgeplottestLOG.txt
figure_scripts/: FoldedAssignedDBHeatmap.py  RNA_types.py  findLengthsSeqs.py  plot_avgStemReacvsEnergy.py  reactivity_plot.py  stem_scatter.py
reactivity_libraries/: B2_DMS_log.txt  H2_DMS_log_distal.txt  H2_DMS_log_local.txt  I1.1StemReacs.txt  I1_DMS_log_local.txt  README.txt  bars_AUROC.sh  filter_libraries_length.py  fold_RNA_txt.py  generate.sh  generate_libraries.py  make_AUROC_curve_fits.sh  make_AUROCavs.sh  make_DMS_heatmaps.sh  make_avgstemplots.sh  make_folded_heatmaps.sh  make_perposition_stemReacs.sh  plotAUROC_balance.sh  template.db
(+114 files in other folders)
